Start routing implementation

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,14 +1,8 @@
-.app {
-  max-width: 800px;
-  padding: 24px;
+.menu {
+  height: 60px;
+  padding: 10px 0;
+}
 
-  margin: auto;
-
-  &__items {
-    margin-top: 40px;
-
-    item-card + item-card {
-      margin: 0 0 0 3px;
-    }
-  }
+.content {
+  margin-top: 80px;
 }
