--- a/src/styles.less
+++ b/src/styles.less
@@ -1,15 +1,1 @@
-@import './styles/colors.less';
-
-@import (css) url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap&subset=cyrillic');
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Noto Sans', 'Courier New', Courier, monospace;
-}
-
-body {
-  background: @color-light;
-  font-size: 32px;
-}
+@import '../node_modules/semantic-ui-css/semantic.min.css';
