--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <div class="app">
-  <new-item (add)="addNewItem($event)"></new-item>
-  <div class="app__items">
-    <item-card
-      *ngFor="let item of items; let i = index"
-      [name]="item"
-      (delete)="deleteItem(i)"
-    >
-    </item-card>
+  <div class="ui fixed inverted menu">
+    <div class="ui container">
+      <a href="#" class="header item">
+        Angular Example
+      </a>
+      <items-search class="ui item right"></items-search>
+    </div>
+  </div>
+  <div class="ui middle aligned stackable grid container content">
+      <router-outlet></router-outlet>
   </div>
 </div>
