--- a/src/app/components/item-card/item-card.component.less
+++ b/src/app/components/item-card/item-card.component.less
@@ -1,54 +1,28 @@
-@import '../../../styles/colors.less';
-
-.item-card {
-  position: relative;
-
-  background: @color-lighter;
-  padding: 32px;
-  border-radius: 3px;
-
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-
-  &:hover {
-    box-shadow: 0 7px 14px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);
-  }
-
-  &:hover > &__delete-button {
-    display: block;
-  }
-
-  &__delete-button {
-    position: absolute;
-    right: 16px;
-    top: 16px;
+.card {
+  .close.icon {
+    z-index: 1;
 
     display: none;
+
+    position: absolute;
+    top: 14px;
+    right: 14px;
+    transition: color 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+
     cursor: pointer;
 
-    width: 32px;
-    height: 32px;
-    opacity: 0.3;
+    &::before {
+      font-size: 32px;
+    }
 
     &:hover {
-      opacity: 1;
+      color: #db2828;
     }
+  }
 
-    &:before, &:after {
-      position: absolute;
-      left: 15px;
-      content: ' ';
-      height: 33px;
-      width: 2px;
-      background-color: #333;
-    }
-
-    &:before {
-      transform: rotate(45deg);
-    }
-
-    &:after {
-      transform: rotate(-45deg);
+  &:hover {
+    .close.icon {
+      display: block;
     }
   }
 }
