--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,5 @@
 <div class="app">
-  <div class="ui fixed inverted menu">
-    <div class="ui container">
-      <a href="#" class="header item">
-        Angular Example
-      </a>
-      <items-search class="ui item right"></items-search>
-    </div>
-  </div>
+  <the-header></the-header>
   <div class="ui middle aligned stackable grid container content">
       <router-outlet></router-outlet>
   </div>
