--- a/src/app/components/items-list/items-list.component.html
+++ b/src/app/components/items-list/items-list.component.html
@@ -1,6 +1,10 @@
 <div class="ui grid">
     <ng-container *ngIf="items">
-      <item-card *ngFor="let item of items; let i = index" [name]="item" (delete)="deleteItem(i)">
+      <item-card
+        *ngFor="let item of items"
+        [item]="item"
+        (delete)="deleteItem(item.id)"
+      >
       </item-card>
     </ng-container>
     <div *ngIf="loading" class="ui active iverted dimmer">
