--- a/src/app/components/new-item/new-item.component.html
+++ b/src/app/components/new-item/new-item.component.html
@@ -1,16 +1,1 @@
-<div class="new-item">
-  <input
-    type="text"
-    class="new-item__input"
-    placeholder="New item..."
-    [(ngModel)]="name"
-    (keyup.enter)="onAddClick()"
-  >
-  <button
-    type="button"
-    class="new-item__add-button"
-    (click)="onAddClick()"
-  >
-    Add
-  </button>
-</div>
+<item-details (submitItem)="add($event)"></item-details>
