--- a/src/app/components/the-header/the-header.component.html
+++ b/src/app/components/the-header/the-header.component.html
@@ -4,7 +4,7 @@
             Angular Example
         </a>
         <a routerLink="/items/new" class="ui item">
-            Добавить
+            Add
         </a>
         <items-search class="ui item right"></items-search>
     </div>
